텍스트 수정

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Milky - Dairy Website Template</title>
+    <title>Fairytale - 동화로의 초대</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -63,9 +63,8 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="section-title bg-white text-start text-primary pe-3">Fairytale - 동화</p>
                     <h1 class="mb-4">여러분을 동화 속으로 초대합니다!</h1>
-                    <p class="mb-4">~~~뭐라하지 ㅎㅎ</p>
                     <p><i class="fa fa-check text-primary me-3"></i>실력자들의 신나는 공연</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>ㅎㅎ</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>단돈 만원에ㅎㅎ</p>
                     <p><i class="fa fa-check text-primary me-3"></i>다양한 경품추천</p>
                     <a class="btn btn-secondary rounded-pill py-3 px-5 mt-3" href="https://forms.gle/DV2Dag6MoG4XkaN17">티켓 구매하기</a>
                 </div>
