--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
     <!-- Carousel Start -->
-    <div class="container-fluid px-0 mb-5">
+    <!-- <div class="container-fluid px-0 mb-5">
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Carousel End -->
 
 
