초록색으로 변경

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     <p class="section-title bg-white text-start text-primary pe-3">Fairytale - 동화</p>
                     <h1 class="mb-4">여러분을 동화 속으로 초대합니다!</h1>
                     <p><i class="fa fa-check text-primary me-3"></i>실력자들의 신나는 공연</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>단돈 만원에ㅎㅎ</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>다양한 경품추천</p>
-                    <a class="btn btn-secondary rounded-pill py-3 px-5 mt-3" href="https://forms.gle/DV2Dag6MoG4XkaN17">티켓 구매하기</a>
+                    <p><i class="fa fa-check text-primary me-3"></i>단돈 10000원에</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>다양한 경품추천까지</p>
+                    <a class="btn btn-success rounded-pill py-3 px-5 mt-3" href="https://forms.gle/DV2Dag6MoG4XkaN17">티켓 구매하기</a>
                 </div>
                 <div class="col-lg-6">
                     <img class="w-100" src="img/poster.jpeg" alt="Image">
@@ -77,11 +77,11 @@
     <!-- Features End -->
 
     <!-- Copyright Start -->
-    <div class="container-fluid bg-secondary text-body copyright py-4">
+    <div class="container-fluid bg-light text-body copyright py-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="fw-semi-bold" href="#">낭만상점</a>, All Right Reserved.
+                    &copy; <a class="fw-semi-bold" href="https://www.youtube.com/channel/UCBqinTgS7PqIPV3Ti5tSngg">낭만상점</a>, All Right Reserved.
                 </div>
             </div>
         </div>
