--- a/index.html
+++ b/index.html
@@ -62,10 +62,15 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="section-title bg-white text-start text-primary pe-3">Fairytale - 동화</p>
-                    <h1 class="mb-4">여러분을 동화 속으로 초대합니다!</h1>
-                    <p><i class="fa fa-check text-primary me-3"></i>실력자들의 신나는 공연</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>단돈 10000원에</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>다양한 경품추천까지</p>
+                    <h1 class="mb-4">2024년 따뜻한 겨울</h1>
+                    <h3 class="mb-4">동화 속으로 여러분을 초대합니다</h3>
+                    <p><i class="fa fa-check text-primary me-2"></i>취미반 부터 전공생까지<br>
+                        <i class="text-primary me-4"></i>다채로운 실력을 가진 연주자들의 신나는 공연</p>
+                    <p><i class="fa fa-check text-primary me-2"></i>락부터 아이돌 노래까지 <br>
+                        <i class="text-primary me-4"></i>뛰어놀며 즐길 수 있어요 </p>
+                    <p><i class="fa fa-check text-primary me-2"></i>어마어마한 경품 추천까지<br>
+                        <i class="text-primary me-4"></i>누구나 받을 수 있어요</p>
+                    </p>
                     <a class="btn btn-success rounded-pill py-3 px-5 mt-3" href="https://forms.gle/DV2Dag6MoG4XkaN17">티켓 구매하기</a>
                 </div>
                 <div class="col-lg-6">
